# FLYNC

./: .gitlab-ci.yml  pyproject.toml  sonar-project.properties
.github/workflows/: build_and_deploy_docs.yaml  pr_sonar_and_coverage_reports.yaml  push_and_pr.yaml
docs/: Makefile
docs/source/: flync_example.rst  flync_reference.rst  index.rst  release_notes.rst
docs/source/_scripts/: generate_ecu_diagram.py
docs/source/flync_reference/sdk_core/: core_reference.rst  object_mapping.rst  validation_api.rst
docs/source/flync_reference/submodels/: flync_4_bus.rst  flync_4_ecu.rst  flync_4_general.rst  flync_4_metadata.rst  flync_4_signal.rst  flync_4_someip.rst
examples/ecu_variants/ecu_variant_1_single_controller_single_iface_ext_PHY/: ports.flync.yaml  topology.flync.yaml
examples/ecu_variants/ecu_variant_2_single_controller_single_iface_int_PHY/: ports.flync.yaml
examples/ecu_variants/ecu_variant_3_single_controller_multiple_iface_ext_PHY/: ports.flync.yaml
examples/ecu_variants/ecu_variant_4_single_controller_multiple_iface_int_PHY/: topology.flync.yaml
examples/ecu_variants/ecu_variant_6_single_controller_multiple_iface_physical_ext_phy/: ports.flync.yaml  topology.flync.yaml
examples/ecu_variants/ecu_variant_7_switch_ecu_ext_PHY/: ecu_metadata.flync.yaml
examples/ecu_variants/ecu_variant_7_switch_ecu_ext_PHY/switches/: ecu1_switch1.flync.yaml
examples/ecu_variants/ecu_variant_8_switch_ecu_with_host_ext_PHY/: topology.flync.yaml
examples/ecu_variants/ecu_variant_8_switch_ecu_with_host_ext_PHY/switches/: ecu1_switch1.flync.yaml
examples/flync_example/ecus/zonal_platform1/: mac_multicast_endpoints.flync.yaml
examples/flync_example/general/someip/: sd_config.flync.yaml  someip_timings.flync.yaml
scripts/helpers/: local_checkers.sh
src/flync/core/annotations/: __init__.py  implied.py
src/flync/core/base_models/: __init__.py  base_model.py  dict_instances.py  instances_registery.py  list_instances.py  unique_name.py
src/flync/core/datatypes/: base.py  bitrange.py  ipaddress.py  value_range.py
src/flync/core/utils/: base_utils.py  common_validators.py  exceptions.py  exceptions_handling.py
src/flync/core/version_migrators/: __init__.py  legacy_controller_check.py
src/flync/model/: flync_model.py
src/flync/model/flync_4_bus/: __init__.py  can_bus.py  lin_bus.py
src/flync/model/flync_4_ecu/: __init__.py  can_interface.py  controller.py  ecu.py  internal_topology.py  lin_interface.py  mac_multicast_endpoint.py  phy.py  (+7 more)
src/flync/sdk/: __init__.py
tests/: conftest.py
tests/sdk/: conftest.py  test_helpers.py
tests/system_test/model/: test_compute_nodes_negative.py  test_compute_nodes_positive.py  test_multicast_groups_negative.py  test_multicast_groups_positive.py  test_multicast_paths.py
tests/system_test/sdk/: test_load_workspace.py
tests/unit_test/core/: test_optional_field_defaults.py  test_unique_name_mixin.py
tests/unit_test/model/: conftest.py
tests/unit_test/sdk/: test_helpers.py
(+94 files in other folders)
